# icra2022_jiyai

./: README.md
tsid/: CMakeLists.txt
tsid/bindings/python/solvers/: solver-HQP-qpoases.cpp
tsid/demo/: demo_quadruped.py
tsid/include/tsid/bindings/python/solvers/: expose-solvers.hpp  solver-HQP-qpoases.hpp
tsid/include/tsid/solvers/: fwd.hpp  solver-HQP-qpoases.hpp
tsid/src/solvers/: solver-HQP-factory.cpp  solver-HQP-qpoases.cpp
tsid/tests/: CMakeLists.txt  tsid-formulation.cpp
tsid/tests/python/: test_Formulation.py  test_Solvers.py
tsid_api/: CMakeLists.txt
tsid_api/data/test/sanghyun/: .~DOC 文档.doc  darpa_2steps.p  darpa_latest_no_large_slope.p  flat_longswing.p
tsid_api/model/: talos_reduced_corrected_mod.urdf
tsid_api/python/: CMakeLists.txt
tsid_api/python/tsid_api/: __init__.py  contact_data.py  interpolation.py  loco_data.py  loco_data_Origin.py  phase.py  tsid_wb.py
tsid_api/python/tsid_api/conf/: conf_talos.py  conf_talos_Original.py
tsid_api/python/tsid_api/trajectories/: bezier_predef.py  limb_rrt.py  limb_rrt_optimized.py
tsid_api/python/tsid_api/util/: cs_util.py  simulator.py  util.py
tsid_api/result/test/sanghyun/: darpa_2steps_cs.xml  darpa_2steps_ref  darpa_2steps_refined.p  darpa_latest_no_large_slope_cs.xml  darpa_latest_no_large_slope_ref  darpa_latest_no_large_slope_refined.p  flat_longswing_cs.xml  flat_longswing_ref  flat_longswing_refined.p
tsid_api/run/: run.py
tsid_api/unittest/: contact.py  display copy.py  display.py  end-effector.py  refine.py  tsid_test.py
